Fixed scroll and layout issues with carousel

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -7,8 +7,6 @@
     height: 4rem;
     margin-top: 1rem;
     justify-content: center;
-    width: 100%;
-    padding-left: calc(#{width} / 2);
 
     .img {
         padding: 0.5rem 2rem;
