--- a/styles/components/terminal.module.scss
+++ b/styles/components/terminal.module.scss
@@ -17,10 +17,10 @@
 }
 
 .container {
-    height: calc(100% - 7rem);
+    height: calc(100%);
 
     @media (max-height: 800px) {
-        height: calc(100% - 5rem);
+        height: calc(100%);
     }
 }
 
@@ -29,7 +29,7 @@
     overflow: scroll;
 
     @media (max-height: 800px) {
-        max-height: 80%;
+        max-height: 90%;
     }
 }
 
